...
        bottomBar = { LabRatBottomBar(navController) },
        floatingActionButton = {
            if (currentDestination?.hierarchy?.any { it.route == TabRoutes.Dashboard.route } == true) {
                FloatingActionButton(
                    onClick = { navController.navigate(FullScreenRoutes.AddLabResult.route) }
                ) {
                    Icon(Icons.Filled.Add, contentDescription = "Add Lab Result")
                }
            }
        }
    ) { innerPadding ->
        LabRatNavHost(
            navController = navController,
...
